k8s/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: mkjs
  labels:
    app.kubernetes.io/name: mkjs-nginx
    app.kubernetes.io/part-of: mkjs
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: mkjs-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mkjs-nginx
  namespace: mkjs
  labels:
    app.kubernetes.io/name: mkjs-nginx
    app.kubernetes.io/part-of: mkjs
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: mkjs-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mkjs-nginx
        app.kubernetes.io/part-of: mkjs
    spec:
      containers:
        - name: nginx
          image: ghcr.io/leticiaresende23/trabalho-individual-gces-nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
